--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -1,6 +1,11 @@
 <div class="navbar">
   <div class="navbar-inner">
     <div class="container" style="width: auto;">
+      <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </a>
       <div class="nav-collapse">
         <ul class="nav">
           <li><a href="{{ root_url }}/">Home</a></li>
