--- a/source/_includes/header.html
+++ b/source/_includes/header.html
@@ -1,13 +1,21 @@
+{% if site.subscribe_email or site.subscribe_rss or site.twitter_user %}
 <div class="subscribe">
   <table>
     <tr>
       <td><span>Get Updates: &nbsp;</span></td>
+      {% if site.subscribe.email %}
       <td><a href="#" onclick="window.open('{{site.subscribe_email}}','FeedBurner','menubar=no,width=600,height=600,toolbar=no'); return false;" class="btn"><i class="icon-envelope"></i> By Email</a></td>
+      {% endif %}
+      {% if site.subscribe_rss %}
       <td><a href="{{site.subscribe_rss}}" class="btn"><i class="icon-cog"></i> By RSS</a></td>
+      {% endif %}
+      {% if site.twitter_user %}
       <td><a href="http://twitter.com/{{site.twitter_user}}" class="btn"><i class="icon-twitter-sign"></i> On Twitter</a></td>
+      {% endif %}
     </tr>
   </table>
 </div>
+{% endif %}
 <h1 class="title">{{ site.title }}</h1>
 {% if site.subtitle %}
   <p class="lead">{{ site.subtitle }}</p>
