--- a/source/_includes/navigation.html
+++ b/source/_includes/navigation.html
@@ -7,12 +7,7 @@
         <span class="icon-bar"></span>
       </a>
       <div class="nav-collapse">
-        <ul class="nav">
-          <li><a href="{{ root_url }}/">Home</a></li>
-          <li><a href="{{ root_url }}/blog/archives">Blog</a></li>
-          <li><a href="{{ root_url }}/projects">Projects</a></li>
-          <li><a href="{{ root_url }}/contact">Contact</a></li>
-        </ul>
+        {% include custom/navigation.html %}
         {% if site.simple_search %}
           <form action="{{ site.simple_search }}" method="get" class="navbar-search pull-left">
             <fieldset role="search">
@@ -21,11 +16,13 @@
             </fieldset>
           </form>
         {% endif %}
+        {% if site.feedburner_url %}
         <ul class="nav pull-right">
           <li>
-            <a style="padding: 7px 0 0 0;" href="http://feeds.feedburner.com/brianarmstrong/vTOG"><img src="http://feeds.feedburner.com/~fc/brianarmstrong/vTOG?bg=a1cefc&amp;fg=444444&amp;anim=0" height="26" width="88" style="border:0" alt="" /></a>            
+            <a style="padding: 7px 0 0 0;" href="{{ site.feedburner_url }}"><img src="{{ site.feedburner_img_url }}&amp;fg=444444&amp;anim=0" height="26" width="88" style="border:0" alt="" /></a>            
           </li>
         </ul>
+        {% endif %}
       </div><!-- /.nav-collapse -->
     </div>
   </div><!-- /navbar-inner -->
