Further improvements to allow sidebar to be on either side
Also fix for when page.sidebar not set - should default to true in
my opinion - but could have a site.sidebar_default if need be.

--- a/source/_includes/sidebar.html
+++ b/source/_includes/sidebar.html
@@ -1,5 +1,5 @@
 {% unless page.sidebar == false %}
-  <div class="span4 sidebar">
+  <div class="span{{ site.sidebar_width or 4 }} sidebar">
     <div class="well">
       {% if site.page_asides.size %}
         {% include_array page_asides %}
