--- a/source/_layouts/page.html
+++ b/source/_layouts/page.html
@@ -3,6 +3,9 @@ layout: default
 ---
 
 <div class="row">
+  {% if page.sidebar and site.sidebar_posn == "left" %}
+    {% include sidebar.html %}
+  {% endif %}
   <div class="{% if page.sidebar == false %}span12{% else %}span8{% endif %}">
     {% if page.title %}
       <div class="page-header">
@@ -33,5 +36,7 @@ layout: default
       </section>
     {% endif %}
   </div>
-  {% include sidebar.html %}
+  {% if page.sidebar and site.sidebar_posn != "left" %}
+    {% include sidebar.html %}
+  {% endif %}
 </div>
