--- a/source/_layouts/post.html
+++ b/source/_layouts/post.html
@@ -1,10 +1,14 @@
 ---
 layout: default
 single: true
+# page.sidebar is not necessarily set for pages - assume true if not set
 ---
 
 <div class="row">
-  <div class="{% if page.sidebar == false %}span12{% else %}span8{% endif %}">
+  {% if page.sidebar != false and site.sidebar_posn == "left" %}
+    {% include sidebar.html %}
+  {% endif %}
+  <div class="{% if page.sidebar != false %}span8{% else %}span12{% endif %}">
     {% include article.html %}
     <footer>
       <p class="meta">
@@ -17,10 +21,10 @@ single: true
       {% endunless %}
       <p class="meta">
         {% if page.previous.url %}
-          <a class="basic-alignment left" href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; {{page.previous.title}}</a>
+          <a class="basic-alignment pull-left" href="{{page.previous.url}}" title="Previous Post: {{page.previous.title}}">&laquo; {{page.previous.title}}</a>
         {% endif %}
         {% if page.next.url %}
-          <a class="basic-alignment right" href="{{page.next.url}}" title="Next Post: {{page.next.title}}">{{page.next.title}} &raquo;</a>
+          <a class="basic-alignment pull-right" href="{{page.next.url}}" title="Next Post: {{page.next.title}}">{{page.next.title}} &raquo;</a>
         {% endif %}
       </p>
     </footer>
@@ -33,6 +37,8 @@ single: true
     {% endif %}
   </div>
 
-  {% include sidebar.html %}
+  {% if page.sidebar != false and site.sidebar_posn != "left" %}
+    {% include sidebar.html %}
+  {% endif %}
 </div>
 
